User search work, user create enable 90%
problems to send image in user creator, else works fine

--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -120,7 +120,7 @@ nav button {
     margin-bottom: 15%;
     min-height: 85vh;
     font-weight: 300px;
-    position: relative;
+    position: ;
 }
 
 @media screen and (max-width: 750px) {
