--- a/src/app/user/create-user/create-user.component.css
+++ b/src/app/user/create-user/create-user.component.css
@@ -1,5 +1,5 @@
 #createCard {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
@@ -65,12 +65,29 @@ h2 {
 }
 
 .form1 div {
-    width: 50%;
-    padding: 20px 0;
+    width: 48%;
+    /* padding: 20px 0; */
+}
+
+
+/* esctructurada css para  Inputs y labels etc */
+
+.flexform {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+    padding: 0;
+    margin: 0;
+    width: 100% !important;
+}
+
+.flexform div input {
+    width: 90%;
 }
 
 .background {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     background: black;
