--- a/src/app/user/create-user/create-user.component.html
+++ b/src/app/user/create-user/create-user.component.html
@@ -7,7 +7,7 @@
         <h1 align="center">Crear Usuario</h1>
 
         <div>
-            <form (submit)="createUser()">
+            <form (submit)="createUser()" enctype="multipart/form-data">
                 <div class="form1">
                     <div class="personalData">
                         <h2>Datos Personales</h2>
@@ -15,68 +15,125 @@
                         <div *ngIf="validations.validate == false" class="divErrors">
                             <h5>Error/es:</h5>
                             <p *ngIf="validations.name == 1">Se requiere el nombre</p>
-                            <p *ngIf="validations.email == 1">Seleccion el tipo de relacion</p>
+                            <p *ngIf="validations.name == 2">Nombre existente en la base de datos</p>
+                            <p *ngIf="validations.email == 1">Correo Requerido</p>
+                            <p *ngIf="validations.email == 2">Ese nombre ya existe en la base de datos</p>
                             <p *ngIf="validations.password == 1">Se requiere el Correo/Telefono</p>
                         </div>
-
-                        <input [(ngModel)]="user.name" name="name" type="text" placeholder="Nombre" (keydown)="nameUppercase()" (keypress)="uniqueNameWriting()" [ngClass]="{ inputError: validations.name > 0 }">
-
-                        <input [(ngModel)]="user.email" name="email" type="email" placeholder="Correo" (keydown)="mailUpper()" (keypress)="uniqueEmailWriting()" [ngClass]="{ inputError: validations.email > 0 }"><br>
-
-                        <select [(ngModel)]="user.userTypeId" name="userTypeId">
-                          <option value="1">Alumno</option> 
-                          <option value="2">Empleado</option>
-                          <option value="3">Cajero</option>
-                          <option value="4">Escritor</option>
-                          <option value="5">Super escritor</option>
-                          <option value="6">Administrador</option>
-                        </select>
-
-                        <select [(ngModel)]="user.gender" name="gender">
-                                <option value="1">Masculino</option> 
-                                <option value="2">Femenino</option>
-                              </select>
-
-                        <input [(ngModel)]="user.phone" name="phone" type="tel" placeholder="Telefono">
+                        <div class="flexform">
+                            <div>
+                                <label>Nombre Completo:</label><br>
+                                <input [(ngModel)]="user.name" name="name" type="text" placeholder="Nombre" (keydown)="nameUppercase()" (keypress)="uniqueNameWriting()" [ngClass]="{ inputError: validations.name > 0 }">
+                            </div>
 
 
+                            <div>
+                                <label>Correo:</label><br>
+                                <input [(ngModel)]="user.email" name="email" type="email" placeholder="Correo" (keydown)="mailUpper()" (keypress)="uniqueEmailWriting()" [ngClass]="{ inputError: validations.email > 0 }">
+                            </div>
 
-                        <input [(ngModel)]="user.birthday" name="birthday" type="date" placeholder="Cumpleanos">
+                            <div>
+                                <label>Tipo de usuario:</label><br>
+                                <select [(ngModel)]="user.userTypeId" name="userTypeId">
+                                    <option value="1">Alumno</option> 
+                                    <option value="2">Empleado</option>
+                                    <option value="3">Cajero</option>
+                                    <option value="4">Escritor</option>
+                                    <option value="5">Super escritor</option>
+                                    <option value="6">Administrador</option>
+                            </select>
+                            </div>
 
-                        <input [(ngModel)]="user.placeBirth" name="placeBirth" type="text" placeholder="Lugar de nacimiento" (keydown)="placeUpper()">
+                            <div>
+                                <label>Genero:</label><br>
+                                <select [(ngModel)]="user.gender" name="gender">
+                                    <option value="1">Masculino</option> 
+                                    <option value="2">Femenino</option>
+                            </select>
+                            </div>
 
-                        <input [(ngModel)]="user.curp" name="curp" type="text" placeholder="Curp" (keydown)="curpUpper()">
+                            <div>
+                                <label>Telefono:</label><br>
+                                <input [(ngModel)]="user.phone" name="phone" type="tel" placeholder="Telefono">
+                            </div>
 
-                        <input [(ngModel)]="user.insurance" name="insurance" type="text" placeholder="Seguro social" (keydown)="seguroUpper()">
 
-                        <input name="foto" type="file" placeholder="Foto">
 
-                        <input *ngIf="user.userTypeId > 2" [(ngModel)]="user.password" name="password" placeholder="Contraseña" type="password" [ngClass]="{ inputError: validations.password > 0 }">
+                            <div>
+                                <label>Fecha de nacimiento:</label><br>
+                                <input [(ngModel)]="user.birthday" name="birthday" type="date" placeholder="Cumpleanos">
+                            </div>
+
+                            <div>
+                                <label>Lugar de nacimiento:</label><br>
+                                <input [(ngModel)]="user.placeBirth" name="placeBirth" type="text" placeholder="Lugar de nacimiento" (keydown)="placeUpper()">
+                            </div>
+
+                            <div>
+                                <label>CURP:</label><br>
+                                <input [(ngModel)]="user.curp" name="curp" type="text" placeholder="Curp" (keydown)="curpUpper()">
+                            </div>
+
+                            <div>
+                                <label>Seguro Medico:</label><br>
+                                <input [(ngModel)]="user.insurance" name="insurance" type="text" placeholder="Seguro social" (keydown)="seguroUpper()">
+                            </div>
+
+                            <div>
+                                <label>Foto:</label><br>
+                                <input #fileInput class="fileInput" id="fileInput" name="fileInput" type="file" accept="image/x-png,image/gif,image/jpeg">
+                            </div>
+
+                            <div *ngIf="user.userTypeId > 2">
+                                <label>Contraseña:</label><br>
+                                <input [(ngModel)]="user.password" name="password" placeholder="Contraseña" type="password" [ngClass]="{ inputError: validations.password > 0 }">
+                            </div>
+
+                        </div>
+
 
                     </div>
 
                     <div class="direccion">
                         <h2>Direccion</h2>
+                        <div class="flexform">
+                            <div>
+                                <label>Calle:</label><br>
+                                <input [(ngModel)]="user.street" name="street" type="text" placeholder="Calle" (keydown)="streetUpper()">
+                            </div>
 
-                        <input [(ngModel)]="user.street" name="street" type="text" placeholder="Calle" (keydown)="streetUpper()">
-                        <input [(ngModel)]="user.hauseNumber" name="hauseNumber" type="number" placeholder="Numero de casa"><br>
-                        <input [(ngModel)]="user.colony" name="colony" type="text" placeholder="Colonia" (keydown)="colonyUpper()">
-                        <input [(ngModel)]="user.city" name="city" type="text" placeholder="Ciudad" (keydown)="cityUpper()"><br>
+                            <div>
+                                <label>Numero de casa:</label><br>
+                                <input [(ngModel)]="user.hauseNumber" name="hauseNumber" type="number" placeholder="Numero de casa"><br>
+                            </div>
 
-                        <div *ngIf="user.userTypeId == 2 || user.userTypeId == 3">
-                            <h2>Salario</h2>
-                            <input [(ngModel)]="salary.amount" name="amount" type="number" min="0" placeholder="Monto">
-                            <input [(ngModel)]="salary.bonus" name="bonus" type="number" min="0" placeholder="Bono">
-                            <select [(ngModel)]="salary.salaryTypeId" name="salaryTypeId">
+                            <div>
+                                <label>Colonia:</label><br>
+                                <input [(ngModel)]="user.colony" name="colony" type="text" placeholder="Colonia" (keydown)="colonyUpper()">
+                            </div>
+
+                            <div>
+                                <label>Ciudad:</label><br>
+                                <input [(ngModel)]="user.city" name="city" type="text" placeholder="Ciudad" (keydown)="cityUpper()"><br>
+                            </div>
+
+
+                            <div *ngIf="user.userTypeId == 2 || user.userTypeId == 3">
+                                <h2>Salario</h2>
+                                <input [(ngModel)]="salary.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ inputError: validations.salaryAmount == 1}">
+                                <input [(ngModel)]="salary.bonus" name="bonus" type="number" min="0" placeholder="Bono">
+                                <select [(ngModel)]="salary.salaryTypeId" name="salaryTypeId">
                                 <option value="1">Hora</option>
                                 <option value="2">Día</option>
                             </select>
 
-                        </div>
+                            </div>
 
-                        <div *ngIf="user.userTypeId == 1 ">
-                            <h2>Pago Mensual</h2>
-                            <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" min="0" placeholder="Monto">
+                            <div *ngIf="user.userTypeId == 1 ">
+                                <h2>Pago Mensual</h2>
+                                <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ inputError: validations.monthlyPaymentAmount > 0 }">
+                            </div>
+
                         </div>
                     </div>
                     <button type="submit" class="btn formBtn">Crear Usuario</button>
@@ -94,7 +151,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let x of schedules">
+                        <tr *ngFor="let x of schedules" [ngClass]="{ scheduleInactive: !x.active }">
                             <!-- <ng-container *ngIf="x.active"> -->
                             <th>{{ x.dayView }}</th>
                             <th>{{ x.checkIn }}</th>
@@ -134,7 +191,9 @@
 
         <button type="submit" class="btn formBtn">Crear Usuario</button>
 
-        <app-create-schedule *ngIf="scheduleView" [schedules]="schedules" (closeEventCreateSchedule)="assignSchedules($event)"></app-create-schedule>
-        <app-reference-create *ngIf="referenceView" (closeReferenceEvent)="closeReferenceView()" [references]="references"></app-reference-create>
+
     </div>
 </div>
+
+<app-create-schedule *ngIf="scheduleView" [schedules]="schedules" (closeEventCreateSchedule)="assignSchedules($event)"></app-create-schedule>
+<app-reference-create *ngIf="referenceView" (closeReferenceEvent)="closeReferenceView()" [references]="references"></app-reference-create>
