--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="cardModule" [@card]="state.card">
-        <h2>Usuario</h2>
+        <h2>{{ user.name }}</h2>
 
 
     </div>
