Show User Component 50%

--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,27 @@ select {
 }
 
 
+/* Input FlexBox Grid */
+
+.flexform {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+    padding: 0;
+    margin: 0;
+    width: 100% !important;
+}
+
+.flexform div input {
+    width: 90%;
+}
+
+.flexform div {
+    width: 45%;
+}
+
+
 /* Inputs Grid Styles */
 
 .input {
