--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,25 +5,29 @@
     <div class="loginCardModule">
         <img id="logo" src="http://www.woloskygimnasia.com/images/Wolosky-Logo.png">
         <h2 id="bienvenida">Inicia sesión </h2>
-
+        <img src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif" class="loader" *ngIf="serverConection">
         <div id="formSpace">
-            <form (submit)="accesar()">
-                <p *ngIf="form.email == 1">* Correo/Tel Requerido </p>
+
+            <form (submit)="accesar()" [ngClass]="{loading: serverConection}">
+
+                <p *ngIf="form.email == 1">* Correo Requerido </p>
                 <p *ngIf="form.password == 1">* Contraseña Requerida</p>
 
 
-                <input [(ngModel)]="data.email" name="email" type="email" placeholder="Correo o Telefono" #focus><br>
+                <input *ngIf="!serverConection" [(ngModel)]="data.email" name="email" type="email" placeholder="Correo o Telefono" #focus><br>
+                <input *ngIf="serverConection" [(ngModel)]="data.email" name="email" type="email" placeholder="Correo o Telefono" disabled><br>
 
-                <input [(ngModel)]="data.password" name="password" type="password" placeholder="Contraseña"><br>
+                <input *ngIf="!serverConection" [(ngModel)]="data.password" name="password" type="password" placeholder="Contraseña"><br>
+                <input *ngIf="serverConection" [(ngModel)]="data.password" name="password" type="password" placeholder="Contraseña" disabled><br>
 
 
                 <button id="btnLog">asdfasdfas</button>
                 <div class="btn" id="btnLogin" (click)="accesar()">Iniciar sesión</div>
 
                 <button id="btnFacebook" class="btn">Iniciar con Facebook</button>
-
+                <p>¿Olvidaste tu Contraseña?</p>
             </form>
-            <p>¿Olvidaste tu Contraseña?</p>
+
             <!-- <hr>
             <div class="registrateSection">
                 <span>¿Aún no estás registrado?</span>
