--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -37,7 +37,8 @@
 
     <div class="principalCard">
 
-        <app-user *ngIf="views.user"></app-user>
+        <router-outlet></router-outlet>
+        <!-- <app-user *ngIf="views.user"></app-user> -->
 
     </div>
 
