--- a/src/app/user/create-user/create-user.component.html
+++ b/src/app/user/create-user/create-user.component.html
@@ -1,5 +1,5 @@
-<div class="background" [@background]="backgroundState"></div>
-<div id="createCard" [@principal]="cardState">
+<div class="background" [@background]></div>
+<div id="createCard" @principal>
 
     <a [routerLink]="['../']">
         <div id="cerrarBtn"> Cerrar <i class="material-icons">close</i></div>
