--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -49,24 +49,22 @@ input {
     background: #ECECEC;
     padding: 10px;
     border-radius: 3px;
-    margin-bottom: 15px;
+    margin-bottom: 0px;
 }
 
 #btnLog {
-    position: absolute;
-    /* z-index: 12; */
-    opacity: 0;
+    margin-top: 15px;
 }
 
-#btnLogin:hover {
+#btnLog:hover {
     background: #FC2323;
 }
 
-#btnLog:focus+div {
+#btnLog:focus {
     background: #FC2323;
 }
 
-#btnLogin {
+#btnLog {
     background: #C00000;
 }
 
