--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -21,7 +21,7 @@
 
     <h5>APLICACIÓN</h5>
     <ul>
-        <a [routerLink]="['users']">
+        <a [routerLink]="['/users']">
             <li><button mat-button>USUARIOS</button></li>
         </a>
 
