navegation url improvement on the login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
 
 
                 <!-- <button id="btnFacebook" class="btn">Iniciar con Facebook</button> -->
-                <p>¿Olvidaste tu Contraseña?</p>
+                <!-- <p>¿Olvidaste tu Contraseña?</p> -->
             </form>
 
             <!-- <hr>
