clrearing the html project and css

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -22,7 +22,7 @@
     <h5>APLICACIÓN</h5>
     <ul>
         <a [routerLink]="['/users']">
-            <li><button mat-button>USUARIOS</button></li>
+            <li><button mat-button>Usuarios</button></li>
         </a>
 
     </ul>
