--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,44 +1,51 @@
-<div>
+<h1 class="routeTitle">
+    Usuarios</h1>
 
-    <div>
-
-        <input align="middle" [(ngModel)]="searchWord" name="searchWord" type="search" placeholder="Buscar" (keyup)="searchInput()"><br>
-        <div>
-            <table align="center">
-                <tr class="cabecera">
-                    <th>Nombre</th>
-                    <th>Tipo</th>
-                    <th>Telefono</th>
-                    <th>Sexo</th>
-                    <!-- <th colspan="3">Opciones</th> -->
-                </tr>
-
-                <tr *ngFor="let user of users" [routerLink]="['/users/show', user.id]">
-                    <td>{{ user.name }}</td>
-                    <td *ngIf="user.user_type_id == 1">Alumno</td>
-                    <td *ngIf="user.user_type_id == 2">Maestro</td>
-                    <td *ngIf="user.user_type_id == 3">Cajero</td>
-                    <td *ngIf="user.user_type_id == 4">Escritor</td>
-                    <td *ngIf="user.user_type_id == 5">S Escritor</td>
-                    <td *ngIf="user.user_type_id == 6">Administrador</td>
-
-                    <td>{{ user.phone }}</td>
-
-                    <td *ngIf="user.gender == 1">M</td>
-                    <td *ngIf="user.gender == 2">F</td>
-                </tr>
-            </table>
-        </div>
-
-        <a [routerLink]="['/users/create']">
-            <div class="boton">
-                <a class="botonA" matTooltip="Crear"><i class="material-icons">add</i></a>
-            </div>
-        </a>
-
-    </div>
-
-
+<div class="search">
+    <input [(ngModel)]="searchWord" name="searchWord" type="search" placeholder="Buscar Usuario" (keyup)="searchInput()">
+    <label *ngIf="searchWord == undefined || searchWord == ''"><mat-icon>search</mat-icon></label>
+    <label *ngIf="searchWord != undefined && searchWord != ''" (click)="searchWord = null">
+                <mat-icon>close</mat-icon>
+            </label>
 </div>
+
+<div class="responsive-table">
+    <table align="center">
+        <thead>
+            <tr>
+                <th class="left">Nombre</th>
+                <th>Tipo</th>
+                <th>Telefono</th>
+                <th>Sexo</th>
+            </tr>
+            <!-- <th colspan="3">Opciones</th> -->
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users" [routerLink]="['/users/show', user.id]">
+                <td class="left">{{ user.name }}</td>
+                <td *ngIf="user.user_type_id == 1">Alumno</td>
+                <td *ngIf="user.user_type_id == 2">Maestro</td>
+                <td *ngIf="user.user_type_id == 3">Cajero</td>
+                <td *ngIf="user.user_type_id == 4">Escritor</td>
+                <td *ngIf="user.user_type_id == 5">S Escritor</td>
+                <td *ngIf="user.user_type_id == 6">Administrador</td>
+
+                <td>{{ user.phone }}</td>
+
+                <td *ngIf="user.gender == 1">M</td>
+                <td *ngIf="user.gender == 2">F</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<a (click)="redirectCreateUser()">
+    <div class="boton">
+        <a class="botonA" matTooltip="Crear"><i class="material-icons">add</i></a>
+    </div>
+</a>
+
+
+
 
 <router-outlet></router-outlet>
