--- a/src/styles.css
+++ b/src/styles.css
@@ -21,26 +21,104 @@ h5 {
     font-family: 'Oswald', sans-serif;
 }
 
+
+/* Estilo de buscadores Input */
+
+.search {
+    display: block;
+    margin-left: 8px;
+    margin-bottom: 8px;
+    width: fit-content;
+    position: relative;
+}
+
+.search input {
+    background: white !important;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    height: 44px;
+    outline: none;
+    transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    width: 350px;
+    padding-right: 35px;
+    margin: 0 !important;
+}
+
+.search input:focus {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25), 0 0 0 1px rgba(0, 0, 0, 0.16);
+}
+
+.search input:hover {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25), 0 0 0 1px rgba(0, 0, 0, 0.16);
+}
+
+.search label {
+    position: absolute;
+    right: 10px;
+    top: 8px;
+}
+
+
+/* TITULO DE LA RUTA */
+
+.routeTitle {
+    /* text-align: center;*/
+    margin: 0;
+    margin-left: 8px;
+}
+
+
+/* TABLAS campos de tabla */
+
+.responsive-table {
+    overflow-x: scroll;
+}
+
 table {
     width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-color: grey;
 }
 
 thead {
     background: whitesmoke;
     display: table-header-group;
     vertical-align: middle;
-    border-bottom: 5px solid black !important;
+    border-bottom: 1px solid rgb(194, 194, 194);
+}
+
+td {
+    padding: 5px 5px;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.left {
+    text-align: left;
+    /* max-width: 180px; */
+}
+
+tr:hover {
+    background: rgb(235, 235, 235);
+    cursor: pointer;
 }
 
 tr {
-    padding: 10px 4px;
+    padding: 5px 4px;
     height: 50px;
+    transition: .5s;
+    border-bottom: 1px solid rgb(233, 233, 233);
     ;
 }
 
 th {
-    padding: 0;
+    padding: 5px;
 }
+
+
+/* CARTITAS POPOUT */
 
 #headerCard {
     background-color: #3f51b5;
@@ -135,6 +213,35 @@ select {
         max-height: 80%;
         overflow-y: scroll;
     }
+}
+
+
+/* //LOADER Y CARGADORES */
+
+.loadingForm {
+    opacity: .4 !important;
+}
+
+.barLoader {
+    width: 100%;
+    z-index: 100;
+    position: fixed !important;
+    top: 0;
+}
+
+.mat-progress-bar {
+    top: 0;
+    left: 0;
+}
+
+.mat-spinner {
+    position: absolute !important;
+    margin: 0 auto;
+    z-index: 100;
+    display: block;
+    right: 0;
+    left: 0;
+    margin-top: 80px;
 }
 
 
